force-app/main/default/objects/Contact/fields/Junk_Field__c.field-meta.xml
<CustomField>
    <fullName>Junk_Field__c</fullName>
    <label>Junk Field</label>
    <type>DateTime</type>
</CustomField>