force-app/main/default/objects/Contact/fields/Kick_off_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_Call_Status__c</fullName>
    <label>Kick-off Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Complete</fullName>
                <default>true</default>
                <label>Not Complete</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>