force-app/main/default/objects/Contact/fields/Last_PDM_AE_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_PDM_AE_Call__c</fullName>
    <label>Last PDM/AE Call</label>
    <type>Date</type>
</CustomField>