force-app/main/default/objects/Contact/fields/Last_PDM_AE_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_PDM_AE_Email__c</fullName>
    <label>Last PDM/AE Email</label>
    <type>Date</type>
</CustomField>