force-app/main/default/objects/Contact/fields/License_Application_Completed__c.field-meta.xml
<CustomField>
    <fullName>License_Application_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Application Submitted</label>
    <type>Checkbox</type>
</CustomField>