force-app/main/default/objects/Contact/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Unlicensed</fullName>
            </value>
            <value>
                <fullName>Previously Licensed</fullName>
            </value>
            <value>
                <fullName>Needs Verification</fullName>
                <default>true</default>
                <label>Needs Verification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>