force-app/main/default/objects/Contact/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <label>Location Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>