force-app/main/default/objects/Contact/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>