force-app/main/default/objects/Contact/fields/MailingPostalCodeLookup__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCodeLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mailing Zip/Postal Code Lookup</label>
    <referenceTo>Zip_Code__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts_MailingPostalCode</relationshipName>
    <type>Lookup</type>
</CustomField>