force-app/main/default/objects/Contact/fields/MailingStateLookup__c.field-meta.xml
<CustomField>
    <fullName>MailingStateLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mailing State/Province Lookup</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts_MailingState</relationshipName>
    <type>Lookup</type>
</CustomField>