force-app/main/default/objects/Contact/fields/Marketing_Cloud_Link__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Link__c</fullName>
    <label>Marketing Cloud Link</label>
    <length>150</length>
    <type>Text</type>
</CustomField>