force-app/main/default/objects/Contact/fields/MLO_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>MLO_Signature_Date__c</fullName>
    <label>MLO Signature Date</label>
    <type>Date</type>
</CustomField>