force-app/main/default/objects/Contact/fields/MLO_Signed__c.field-meta.xml
<CustomField>
    <fullName>MLO_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MLO Signed</label>
    <type>Checkbox</type>
</CustomField>