force-app/main/default/objects/Contact/fields/Mortgage_License_Status__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_License_Status__c</fullName>
    <label>Mortgage License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Unlicensed</fullName>
            </value>
            <value>
                <fullName>Previously Licensed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>