force-app/main/default/objects/Contact/fields/MU1_Approved__c.field-meta.xml
<CustomField>
    <fullName>MU1_Approved__c</fullName>
    <inlineHelpText>The License Record for the Agent has a status of &quot;Approved&quot;</inlineHelpText>
    <label>MU1 Approved</label>
    <summaryFilterItems>
        <field>License__c.License_Type__c</field>
        <operation>equals</operation>
        <value>Company</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>License__c.State_License_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.Agent_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>