force-app/main/default/objects/Contact/fields/MU1_Deficiency__c.field-meta.xml
<CustomField>
    <fullName>MU1_Deficiency__c</fullName>
    <inlineHelpText>The License Record for the Agent has a status of &quot;Deficiency&quot;</inlineHelpText>
    <label>MU1 Deficiency</label>
    <summaryFilterItems>
        <field>License__c.State_License_Status__c</field>
        <operation>equals</operation>
        <value>Deficiency</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.Agent_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>