force-app/main/default/objects/Contact/fields/MU4_Completed__c.field-meta.xml
<CustomField>
    <fullName>MU4_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MU4 Completed</label>
    <type>Checkbox</type>
</CustomField>