force-app/main/default/objects/Contact/fields/Net_Worth_Financial_Statements__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth_Financial_Statements__c</fullName>
    <label>Net Worth/ Financial Statements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>