force-app/main/default/objects/Contact/fields/NMLS__c.field-meta.xml
<CustomField>
    <fullName>NMLS__c</fullName>
    <label>NMLS</label>
    <length>12</length>
    <type>Text</type>
</CustomField>