force-app/main/default/objects/Contact/fields/NMLS_MU1_Form__c.field-meta.xml
<CustomField>
    <fullName>NMLS_MU1_Form__c</fullName>
    <label>NMLS MU1 Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>