force-app/main/default/objects/Contact/fields/Not_Interested__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The contact is no longer interested in our program</inlineHelpText>
    <label>Not Interested</label>
    <type>Checkbox</type>
</CustomField>