force-app/main/default/objects/Contact/fields/Not_Interested_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Reason__c</fullName>
    <label>Not Interested Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Not_Interested__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not this year</fullName>
            </value>
            <value>
                <fullName>Agent criteria to be defined</fullName>
            </value>
            <value>
                <fullName>Not enough experience</fullName>
            </value>
            <value>
                <fullName>Building network</fullName>
            </value>
            <value>
                <fullName>Looking to hire people</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Regulatory Maintenance</fullName>
            </value>
            <value>
                <fullName>Profitable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>