force-app/main/default/objects/Contact/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>This field can be used for important contact details (ex. best time to contact, personal interests, etc.). This should not replace comments or takeaways from an activity with the contact.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>