force-app/main/default/objects/Contact/fields/Number_of_Broker_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Broker_Licenses__c</fullName>
    <label>Number of Broker Licenses</label>
    <summaryFilterItems>
        <field>License__c.State_Type__c</field>
        <operation>equals</operation>
        <value>Broker</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.Agent_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>