force-app/main/default/objects/Contact/fields/Number_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>