force-app/main/default/objects/Contact/fields/Number_of_Email_Opens_External__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Email_Opens_External__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Email Opens (External)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>