force-app/main/default/objects/Contact/fields/Number_of_OCRs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_OCRs__c</fullName>
    <label>Opportunity Roles</label>
    <summaryForeignKey>Opportunity_Contact_Role__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>