force-app/main/default/objects/Contact/fields/On_boarding_Case__c.field-meta.xml
<CustomField>
    <fullName>On_boarding_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>