force-app/main/default/objects/Contact/fields/Onboarding_Link__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Link__c</fullName>
    <label>Onboarding Link</label>
    <type>Url</type>
</CustomField>