force-app/main/default/objects/Contact/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <label>Onboarding Status (Do Not Use)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>