force-app/main/default/objects/Contact/fields/Onboarding_Status_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status_Last_Modified_Date__c</fullName>
    <label>Onboarding Status Last Modified Date</label>
    <type>DateTime</type>
</CustomField>