force-app/main/default/objects/Contact/fields/Onboarding_Status_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status_Picklist__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker/Not Onboarding</fullName>
                <label>Not Onboarding</label>
            </value>
            <value>
                <fullName>Handraiser</fullName>
            </value>
            <value>
                <fullName>Logged into Workday</fullName>
            </value>
            <value>
                <fullName>Checking Background</fullName>
            </value>
            <value>
                <fullName>Setup (Broker License)</fullName>
            </value>
            <value>
                <fullName>Self Serve</fullName>
            </value>
            <value>
                <fullName>MU1 In-Process</fullName>
            </value>
            <value>
                <fullName>Waiting on Licensing and Training</fullName>
            </value>
            <value>
                <fullName>Waiting on Licensing</fullName>
            </value>
            <value>
                <fullName>MU1 - Deficiencies</fullName>
            </value>
            <value>
                <fullName>MU1 - Approved</fullName>
            </value>
            <value>
                <fullName>Waiting on Training</fullName>
            </value>
            <value>
                <fullName>Onboard with QL</fullName>
            </value>
            <value>
                <fullName>Ready to Originate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>