force-app/main/default/objects/Contact/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <externalId>true</externalId>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>