force-app/main/default/objects/Contact/fields/Original_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Original_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>