force-app/main/default/objects/Contact/fields/Originated_mortgages_with_State_Farm__c.field-meta.xml
<CustomField>
    <fullName>Originated_mortgages_with_State_Farm__c</fullName>
    <label>Originated mortgages with State Farm?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>