force-app/main/default/objects/Contact/fields/Panorama_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Panorama_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panorama Email Opt-Out</label>
    <type>Checkbox</type>
</CustomField>