force-app/main/default/objects/Contact/fields/Partner_Gift__c.field-meta.xml
<CustomField>
    <fullName>Partner_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we want this contact to receive our partner gifts (eg: New Year, Spring, Summer, Fall)?
If Yes, please ensure that mailing address is correct.</inlineHelpText>
    <label>Partner Gift</label>
    <type>Checkbox</type>
</CustomField>