force-app/main/default/objects/Contact/fields/PDM__c.field-meta.xml
<CustomField>
    <fullName>PDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>