force-app/main/default/objects/Contact/fields/Preferred_Banker__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Banker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Banker</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>