force-app/main/default/objects/Contact/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <label>Preferred Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rocket Pro</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>State Farm</fullName>
                <isActive>false</isActive>
                <label>State Farm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>