force-app/main/default/objects/Contact/fields/Preferred_Method_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Method_of_Communication__c</fullName>
    <label>Preferred Method of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>