force-app/main/default/objects/Contact/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
                <default>true</default>
                <label>Main</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>