force-app/main/default/objects/Contact/fields/Prior_Hours_in_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_Hours_in_Onboarding_Status__c</fullName>
    <label>Prior Hours in Onboarding Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>