force-app/main/default/objects/Contact/fields/Products_Pricing_Date_Acquired__c.field-meta.xml
<CustomField>
    <fullName>Products_Pricing_Date_Acquired__c</fullName>
    <label>Products Pricing Date Acquired</label>
    <type>Date</type>
</CustomField>