force-app/main/default/objects/Contact/fields/Products_Pricing_Exam_Status__c.field-meta.xml
<CustomField>
    <fullName>Products_Pricing_Exam_Status__c</fullName>
    <label>Products Pricing Exam Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquired</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>