force-app/main/default/objects/Contact/fields/Products_Pricing_Training_Score__c.field-meta.xml
<CustomField>
    <fullName>Products_Pricing_Training_Score__c</fullName>
    <label>Products Pricing Training Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>