force-app/main/default/objects/Contact/fields/Qualified_Individual__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Individual__c</fullName>
    <label>Qualified Individual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>3rd Party - W2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>