force-app/main/default/objects/Contact/fields/Qualified_Individual_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Individual_Confirmed__c</fullName>
    <label>Qualified Individual Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>