force-app/main/default/objects/Contact/fields/Ready_to_Originate_Status__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Originate_Status__c</fullName>
    <label>Broker Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Ready to Originate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>