force-app/main/default/objects/Contact/fields/Real_Estate_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_License_Number__c</fullName>
    <label>Real Estate License Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>