force-app/main/default/objects/Contact/fields/Registered_Agent__c.field-meta.xml
<CustomField>
    <fullName>Registered_Agent__c</fullName>
    <label>Registered Agent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>