force-app/main/default/objects/Contact/fields/Regulator_Communication__c.field-meta.xml
<CustomField>
    <fullName>Regulator_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact with Regulator</label>
    <type>Checkbox</type>
</CustomField>