force-app/main/default/objects/Contact/fields/relationship_manager__c.field-meta.xml
<CustomField>
    <fullName>relationship_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Contact)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>