force-app/main/default/objects/Contact/fields/Rocket_Pro_Email__c.field-meta.xml
<CustomField>
    <fullName>Rocket_Pro_Email__c</fullName>
    <label>Rocket Pro Email</label>
    <type>Email</type>
</CustomField>