force-app/main/default/objects/Contact/fields/Rocket_Pro_Training_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Rocket_Pro_Training_Completion_Date__c</fullName>
    <label>Rocket Pro Training Completion Date</label>
    <type>Date</type>
</CustomField>